# carcara-vision

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.jetson.yml  docker-compose.nvidia-pc.yml  docker-compose.yml  launch_dev_env.sh  launch_docker_gpu.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/benchmark_scenarios/: 1stream_annotated_off.json  1stream_low_resolution.json  1stream_model_medium.json  1stream_production.json  2streams_production.json  4streams_production.json  baseline_default.json
backend/scripts/: migrate.sh  start.sh
backend/src/: main.py
backend/src/api/endpoints/: alarms.py  cameras.py  detections.py  discovery.py  hardware.py  inference_runtime.py  models.py  roi.py  streams.py  ws_alarms.py  ws_detections.py  ws_streams.py
backend/src/api/models/: benchmark.py  camera.py  detection.py  inference_runtime.py  stream.py
backend/src/core/: config.py  config_new.py  logging.py
backend/src/core/security/: __init__.py  oauth2.py
backend/src/db/: base_class.py  init_db.py
backend/src/db/migrations/versions/: 067388bff907_initial.py  1972e1da883a_.py  20260221_0001_baseline_schema.py  20260322_0002_add_usb_camera_identity.py  20260523_0003_add_stream_display_order.py  20260523_0004_alarms_v2_schema.py  3b1374d3f6c1_.py  443793234df8_.py  473fcce94ff6_.py  7b0d60791e18_.py  add_device_path_to_cameras.py  add_stream_name_column.py  e193b5d44c2d_initial.py
backend/src/ml/: __init__.py  annotator.py  base.py  factory.py  registry.py
backend/src/ml/accelerators/: __init__.py  base.py  cpu.py  cuda.py  detector.py  jetson.py  raspberry.py
backend/src/ml/engines/: __init__.py  onnx.py  tensorrt.py  vlm.py  yolo.py
backend/src/ml/sdk/: __init__.py  config.py  exceptions.py  pipeline.py  resolver.py  tasks.py  types.py
backend/src/models/: alarm.py  camera.py  detection.py  roi.py  stream.py
backend/src/schemas/: alarm.py  hardware.py  roi.py
backend/src/services/: acceleration_policy.py  alarm_dispatcher.py  alarm_engine.py  annotated_stream_writer.py  benchmark_reporting.py  camera_connectivity.py  camera_service.py  cameras.py  detection.py  detection_new.py  discovery.py  gstreamer.py  hardware.py  inference_runtime.py  inference_worker.py  inference_worker_manager.py  model_batch_coordinator.py  models.py  object_detection.py  rtsp.py
backend/tests/src/api/endpoints/: test_alarms_endpoint.py  test_hardware_endpoint.py  test_streams_endpoint.py
backend/tests/src/core/security/: test_auth_feature_flag.py
backend/tests/src/ml/sdk/: test_object_detection_pipeline.py  test_resolver.py  test_vlm_pipeline.py
backend/tests/src/services/: test_alarm_engine.py  test_camera_service.py  test_detection_service.py  test_hardware_service.py  test_inference_worker_sdk.py  test_object_detection_sdk_service.py
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_FEATURE_FLAG.md  CONFIGURATION.md  DESIGN_SYSTEM.md  DOCKER.md  FEATURES.md  LOCAL_CAMERA_SCAN.md  PLATFORM_SETUP.md  QUICK_START.md  ROADMAP.md  STREAM_TO_FRONTEND_ARCHITECTURE.md  TESTING.md  VLM.md
docs/adr/: ADR-0001-inference-sdk.md
frontend/: .dockerignore  .env.development  .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: silent-check-sso.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  index.ts  keycloak.ts
frontend/src/components/: AlarmToastProvider.tsx  CameraScanner.tsx  CameraStream.tsx  Grid.tsx  IPCameraScanner.tsx  Layout.tsx  PolygonEditorDialog.tsx  RegionOfInterest.tsx
frontend/src/components/dialogs/: CameraFormDialog.tsx  ConfirmDeleteDialog.tsx  index.ts
frontend/src/hooks/: useQueries.ts
frontend/src/pages/: Alarms.tsx  Cameras.tsx  Login.tsx  Settings.tsx  Streams.tsx
frontend/src/services/: api.ts
frontend/src/styles/: _app.scss  _base.scss  _components.scss  main.scss
frontend/src/types/: index.ts
frontend/src/utils/: apiUrl.ts  cocoClasses.ts
go2rtc/: Dockerfile  go2rtc.yaml
gstreamer/: .dockerignore  Dockerfile  pipeline_manager.py
keycloak/: realm-export.json
mediamtx/: mediamtx.yml
