[project]
name = "carcara-nvc-backend"
version = "2.0.0"
description = "Network Video Controller with ML-powered Detection - Supporting YOLO, VLMs, and Edge AI"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "python-multipart>=0.0.21",
    # Database
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.1",
    # Configuration & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    # Security
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    # Computer Vision & ML - Core
    "opencv-python>=4.13.0",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    # YOLO Object Detection
    "ultralytics>=8.4.7",
    # PyTorch - CPU by default (override for GPU)
    "torch>=2.9.0,<2.10",
    "torchvision>=0.24.0,<0.25",
    # System utilities
    "psutil>=7.2.1",
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# ONNX Runtime - CPU
onnx = ["onnxruntime>=1.23.2"]

# GPU support with CUDA
cuda = ["onnxruntime-gpu"]

# TensorRT optimization
tensorrt = ["tensorrt>=10.14.0", "pycuda>=2026.1"]

# VLM capabilities
vlm = ["ollama>=0.6.1", "openai>=2.15.0", "transformers>=4.57.6"]

# Edge deployment (Raspberry Pi, Coral TPU) - requires Python <=3.11
# tflite-runtime does not support Python 3.13 yet
edge = ["tflite-runtime>=2.14.0; python_version < '3.12'"]

# Full installation with all features
full = [
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "transformers>=4.57.6",
    "tensorrt>=10.14.0",
    "pycuda>=2026.1",
    "tflite-runtime>=2.14.0; python_version < '3.12'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

# Jetson-specific packages (installed via system on Jetson devices)
# tensorrt and pycuda are typically pre-installed on JetPack
jetson = []

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
]

# Note: PyTorch CPU wheels from PyPI are used by default.
# For GPU support (CUDA), use:
#   UV_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cu121 uv sync
# Or set environment-specific overrides.

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI depends on this)
    "B027",   # empty method in abstract base class without abstract decorator
    "B904",   # raise from within except (existing pattern in FastAPI endpoints)
    "N805",   # first argument of method should be self (SQLAlchemy uses cls)
    "N806",   # variable in function should be lowercase (TRT_LOGGER is conventional)
    "N818",   # exception name should end with Error (existing naming)
    "RUF012", # mutable class attributes without ClassVar (existing pattern)
    "RUF013", # implicit Optional (existing pattern)
    "UP022",  # prefer capture_output (existing subprocess calls)
    "SIM102", # nested if statements (readability preference)
    "SIM105", # contextlib.suppress (readability preference)
    "SIM108", # ternary operator (readability preference)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
